--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"<a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D" shadow></a-cylinder>
     <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4" shadow></a-plane>
    <a-entity geometry="primitive:box "material="color:purple"></a-entity>
-<a-sky color="#EF2D5E"></a-sky>
+<a-sky color="#7CDB4D"></a-sky>
 </a-scene>
     
 </body>
